--- a/SpeedMeasuremetRazor/SpeedMeasuremetRazor.csproj
+++ b/SpeedMeasuremetRazor/SpeedMeasuremetRazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,7 +10,6 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
-    <Folder Include="Pages\Locations\" />
     <Folder Include="Pages\Measurements\" />
   </ItemGroup>
 
